--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section id="frutas-verduras">
             <h2>Frutas e Verduras</h2>
             <div>
-                <img src="C:\Users\eedso\Fase-1-Escritorio-de-Projeto-Fundamentos-de-Sistemas-Web\images\apples.png" alt="Fruta">
+                <img src="https://github.com/EdsonOliveira18/Fase-1-Escritorio-de-Projeto-Fundamentos-de-Sistemas-Web/blob/main/images/apples.png" alt="Fruta">
                 <p>Maçã - R$ 2,00/unidade</p>
             </div>
             <div>
