Atualização do endereço das imagens

--- a/index.html
+++ b/index.html
@@ -16,36 +16,37 @@
         </nav>
     </header>
     <main>
+    
         <section id="frutas-verduras">
             <h2>Frutas e Verduras</h2>
             <div>
-                <img src="https://github.com/EdsonOliveira18/Fase-1-Escritorio-de-Projeto-Fundamentos-de-Sistemas-Web/blob/main/images/apples.png" alt="Fruta">
+                <img src="images/apples.png" alt="Fruta">
                 <p>Maçã - R$ 2,00/unidade</p>
             </div>
             <div>
-                <img src="C:\Users\eedso\Fase-1-Escritorio-de-Projeto-Fundamentos-de-Sistemas-Web\images\lettuce.png" alt="Verdura">
+                <img src="images\lettuce.png" alt="Verdura">
                 <p>Alface - R$ 1,50/unidade</p>
             </div>
         </section>
         <section id="alimentos-nao-pereciveis">
             <h2>Alimentos Não Perecíveis</h2>
             <div>
-                <img src="C:\Users\eedso\Fase-1-Escritorio-de-Projeto-Fundamentos-de-Sistemas-Web\images\rice.png" alt="Arroz">
+                <img src="images\rice.png" alt="Arroz">
                 <p>Arroz - R$ 10,00/pacote</p>
             </div>
             <div>
-                <img src="C:\Users\eedso\Fase-1-Escritorio-de-Projeto-Fundamentos-de-Sistemas-Web\images\bean.png" alt="Feijão">
+                <img src="images\bean.png" alt="Feijão">
                 <p>Feijão - R$ 7,00/pacote</p>
             </div>
         </section>
         <section id="higiene-limpeza">
             <h2>Higiene e Limpeza</h2>
             <div>
-                <img src="C:\Users\eedso\Fase-1-Escritorio-de-Projeto-Fundamentos-de-Sistemas-Web\images\washing_powder.png" alt="Sabão">
+                <img src="images\washing_powder.png" alt="Sabão">
                 <p>Sabão em Pó - R$ 5,00/pacote</p>
             </div>
             <div>
-                <img src="C:\Users\eedso\Fase-1-Escritorio-de-Projeto-Fundamentos-de-Sistemas-Web\images\detergent.png" alt="Detergente">
+                <img src="images\detergent.png" alt="Detergente">
                 <p>Detergente - R$ 3,00/unidade</p>
             </div>
         </section>
